fix menu on mobile devices die to recent change

--- a/src/style.css
+++ b/src/style.css
@@ -84,7 +84,7 @@ body {
   position: relative;
 }
 
-.header .container a {
+.header .container > a {
   display: flex;
 }
 
